📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -22126,5 +22126,149 @@
         "published": "Fri, 19 Dec 2025 15:45:59 +0000",
         "source": "AI News",
         "summary": "<p>Of all the many industries, it&#8217;s marketing where AI is no longer an &#8220;innovation lab&#8221; side project but embedded in briefs, production pipelines, approvals, and media optimisation. A WPP iQ post published in December, based on a webinar with WPP and Stability AI, shows what AI deployment in daily operations looks like. Here, we&#8217;re talking [&#8230;]</p>\n<p>The post <a href=\"https://www.artificialintelligence-news.com/news/marketing-agencies-ai-use-creates-faster-workflows"
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/19/netflix-acquires-gaming-avatar-maker-ready-player-me/",
+        "title": "Netflix acquires gaming avatar maker Ready Player Me",
+        "link": "https://techcrunch.com/2025/12/19/netflix-acquires-gaming-avatar-maker-ready-player-me/",
+        "published": "Fri, 19 Dec 2025 17:00:00 +0000",
+        "source": "TechCrunch",
+        "summary": "The gaming startup will allow Netflix subscribers to create avatars that can extend across gaming titles."
+    },
+    {
+        "id": "https://www.theverge.com/news/848199/ram-shortage-pc-phone-price-increases",
+        "title": "The RAM shortage is here to stay, raising prices on PCs and phones",
+        "link": "https://www.theverge.com/news/848199/ram-shortage-pc-phone-price-increases",
+        "published": "2025-12-19T12:06:40-05:00",
+        "source": "The Verge",
+        "summary": "Your next smartphone or PC might cost more amid a global memory shortage that the International Data Corporation expects to \"persist well into 2027.\" A new report from the research firm lays out the potential impact of the RAM crunch, saying it \"signals the end of an era of cheap, abundant memory and storage\" - [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/gadgets/846881/bose-quietcomfort-ultra-headphones-first-gen-deal-sale-2025",
+        "title": "Bose\u2019s first-gen QC Ultra headphones just hit their lowest price to date",
+        "link": "https://www.theverge.com/gadgets/846881/bose-quietcomfort-ultra-headphones-first-gen-deal-sale-2025",
+        "published": "2025-12-19T12:00:00-05:00",
+        "source": "The Verge",
+        "summary": "If you value peace and quiet, particularly when traveling, Bose\u2019s first-gen QuietComfort Ultra Headphones are worth checking out. They\u2019re our favorite noise-canceling headphones for travel, and right now, you can snag a pair for an all-time low of $279 ($150 off) in select colors from Amazon, Best Buy, and Bose. All three retailers estimate that [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/tech/848029/trump-mobile-ownership-structure-licensing",
+        "title": "Who owns Trump Mobile?",
+        "link": "https://www.theverge.com/tech/848029/trump-mobile-ownership-structure-licensing",
+        "published": "2025-12-19T11:20:27-05:00",
+        "source": "The Verge",
+        "summary": "Where's the Trump Phone? We're going to keep talking about it every week, except next week, when we take a break until the new year. We've reached out, as usual, to ask about the Trump Phone's whereabouts. As usual, we're still waiting for a response. In the meantime, we're wondering who's actually behind the mobile [&#8230;]"
+    },
+    {
+        "id": "https://arstechnica.com/space/2025/12/russia-is-about-to-do-the-most-russia-thing-ever-with-its-next-space-station/",
+        "title": "Russia is about to do the most Russia thing ever with its next space station",
+        "link": "https://arstechnica.com/space/2025/12/russia-is-about-to-do-the-most-russia-thing-ever-with-its-next-space-station/",
+        "published": "Fri, 19 Dec 2025 16:04:35 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "\"Russia, meanwhile, will be left to carry on the legacy of the ISS, with all its problems.\""
+    },
+    {
+        "id": "https://www.engadget.com/social-media/we-have-more-details-on-the-tiktok-deal-including-some-ownership-statistics-163003507.html?src=rss",
+        "title": "We have more details on the TikTok deal, including some ownership statistics",
+        "link": "https://www.engadget.com/social-media/we-have-more-details-on-the-tiktok-deal-including-some-ownership-statistics-163003507.html?src=rss",
+        "published": "Fri, 19 Dec 2025 16:30:03 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>TikTok <a href=\"https://www.engadget.com/social-media/trumps-tiktok-deal-is-another-step-closer-to-finally-actually-happening-001813404.html\"><ins>has signed a deal</ins></a> to spin off its American business, <a href=\"https://apnews.com/article/tiktok-divestment-deal-trump-2fdb915cac5b6d06907a5a2de6764376\"><ins>according to reporting from </ins><em><ins>Associated Press</ins></em></a> and others. This should keep the popular social media app available in the US for good, capping off years of"
+    },
+    {
+        "id": "https://gizmodo.com/the-best-movie-moments-of-2025-2000700814",
+        "title": "The Best Movie Moments of 2025",
+        "link": "https://gizmodo.com/the-best-movie-moments-of-2025-2000700814",
+        "published": "Fri, 19 Dec 2025 17:08:11 +0000",
+        "source": "Gizmodo",
+        "summary": "From 'Sinners' and 'Superman' to 'Weapons' and 'Wicked: For Good,' here are our picks for the best movie moments of 2025."
+    },
+    {
+        "id": "https://gizmodo.com/moon-race-heats-up-as-new-nasa-chief-pits-one-billionaire-against-another-2000701826",
+        "title": "Moon Race Heats Up as New NASA Chief Pits One Billionaire Against Another",
+        "link": "https://gizmodo.com/moon-race-heats-up-as-new-nasa-chief-pits-one-billionaire-against-another-2000701826",
+        "published": "Fri, 19 Dec 2025 17:00:12 +0000",
+        "source": "Gizmodo",
+        "summary": "Whichever company can produce a viable crew lander first will win the Artemis 3 contract, NASA\u2019s new chief says."
+    },
+    {
+        "id": "https://mashable.com/article/dec-19-lg-65-inch-oled-ai-tv-deal",
+        "title": "This LG 65-inch OLED TV just dropped to its lowest price ever \u2014 and it arrives before Christmas",
+        "link": "https://mashable.com/article/dec-19-lg-65-inch-oled-ai-tv-deal",
+        "published": "Fri, 19 Dec 2025 16:48:11 +0000",
+        "source": "Mashable",
+        "summary": "As of Dec. 19, get the LG 65-inch B5 Series AI OLED 4K TV at Amazon for $896.99. That saves you $100, and is the TV's lowest price ever. Shop now and get it before Christmas."
+    },
+    {
+        "id": "https://mashable.com/article/dec-19-elegoo-centauri-carbon-3d-printer-deal",
+        "title": "This plug-and-play 3D printer Is $299 and arrives before Christmas",
+        "link": "https://mashable.com/article/dec-19-elegoo-centauri-carbon-3d-printer-deal",
+        "published": "Fri, 19 Dec 2025 16:25:08 +0000",
+        "source": "Mashable",
+        "summary": "Score the Elegoo Centauri Carbon for just $299.99 (save $80). This high-speed, enclosed 3D printer is perfect for beginners and arrives by Christmas."
+    },
+    {
+        "id": "https://mashable.com/article/waymo-robotaxi-footage-wrong-side-of-road-viral-video",
+        "title": "Driverless Waymo seemingly drives straight into oncoming traffic in viral video",
+        "link": "https://mashable.com/article/waymo-robotaxi-footage-wrong-side-of-road-viral-video",
+        "published": "Fri, 19 Dec 2025 16:18:51 +0000",
+        "source": "Mashable",
+        "summary": "A new viral video shows a Waymo driving straight into oncoming traffic in Austin."
+    },
+    {
+        "id": "https://mashable.com/article/dec-19-samsung-galaxy-z-flip-7-deal",
+        "title": "Ring in the new year with a new phone: The Samsung Galaxy Z Flip 7 is at its lowest price yet",
+        "link": "https://mashable.com/article/dec-19-samsung-galaxy-z-flip-7-deal",
+        "published": "Fri, 19 Dec 2025 16:15:19 +0000",
+        "source": "Mashable",
+        "summary": "As of Dec. 19, get the Samsung Galaxy Z Flip 7 for its lowest price yet."
+    },
+    {
+        "id": "https://mashable.com/article/dec-19-philips-4400-series-espresso-machine-deal",
+        "title": "Save over $400 on the Philips 4400 Series Espresso Machine, and dont worry, itll arrive by Christmas",
+        "link": "https://mashable.com/article/dec-19-philips-4400-series-espresso-machine-deal",
+        "published": "Fri, 19 Dec 2025 16:06:28 +0000",
+        "source": "Mashable",
+        "summary": "As of Dec. 19, shop the Philips 4400 Series Espresso Machine for under $750. Shop at Amazon and save over $450, and the assurance it'll arrive before Christmas."
+    },
+    {
+        "id": "https://www.zdnet.com/article/lg-sound-suite-dolby-atmos-flex-ces-26/",
+        "title": "LG unveils new Dolby Atmos sound system ahead of CES 2026, and it works like magic",
+        "link": "https://www.zdnet.com/article/lg-sound-suite-dolby-atmos-flex-ces-26/",
+        "published": "Fri, 19 Dec 2025 16:44:00 GMT",
+        "source": "Latest news",
+        "summary": "LG has announced a series of new speakers and soundbars, all of which support the brand's new Sound Suite and Dolby Atmos Flex tech."
+    },
+    {
+        "id": "https://www.zdnet.com/article/gemini-ai-video-detection/",
+        "title": "Is that video AI? Gemini can now help you figure it out - but there's a catch",
+        "link": "https://www.zdnet.com/article/gemini-ai-video-detection/",
+        "published": "Fri, 19 Dec 2025 16:39:11 GMT",
+        "source": "Latest news",
+        "summary": "Here's how to use Google Gemini to detect certain AI-generated videos."
+    },
+    {
+        "id": "https://www.zdnet.com/article/best-samsung-tv/",
+        "title": "The best Samsung TVs of 2025: Expert tested OLEDs, big-screens, and more",
+        "link": "https://www.zdnet.com/article/best-samsung-tv/",
+        "published": "Fri, 19 Dec 2025 16:17:00 GMT",
+        "source": "Latest news",
+        "summary": "Samsung offers everything from high-end OLED TVs to budget-friendly options, and we've tested them all to help you find the best fit for your home theater."
+    },
+    {
+        "id": "https://graphite.com/blog/graphite-joins-cursor",
+        "title": "Cursor Acquires Graphite",
+        "link": "https://graphite.com/blog/graphite-joins-cursor",
+        "published": "Fri, 19 Dec 2025 16:07:42 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46327325\">Comments</a>"
+    },
+    {
+        "id": "https://garagehq.deuxfleurs.fr/",
+        "title": "Garage \u2013 An S3 object store so reliable you can run it outside datacenters",
+        "link": "https://garagehq.deuxfleurs.fr/",
+        "published": "Fri, 19 Dec 2025 15:40:03 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46326984\">Comments</a>"
     }
 ]
