📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -22486,5 +22486,101 @@
         "published": "Fri, 19 Dec 2025 18:19:32 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46329038\">Comments</a>"
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/19/yann-lecun-confirms-his-new-world-model-startup-reportedly-seeks-5b-valuation/",
+        "title": "Yann LeCun confirms his new \u2018world model\u2019 startup, reportedly seeks $5B+ valuation",
+        "link": "https://techcrunch.com/2025/12/19/yann-lecun-confirms-his-new-world-model-startup-reportedly-seeks-5b-valuation/",
+        "published": "Fri, 19 Dec 2025 19:23:44 +0000",
+        "source": "TechCrunch",
+        "summary": "Renowned AI scientist Yann LeCun confirmed on Thursday the worst-kept secret in the tech world: that he had indeed launched a new startup. Although he did say he will not be running the new company as its CEO."
+    },
+    {
+        "id": "https://www.wired.com/story/scammers-in-china-are-using-ai-generated-images-to-get-refunds/",
+        "title": "Scammers in China Are Using AI-Generated Images to Get Refunds",
+        "link": "https://www.wired.com/story/scammers-in-china-are-using-ai-generated-images-to-get-refunds/",
+        "published": "Fri, 19 Dec 2025 19:31:43 +0000",
+        "source": "WIRED",
+        "summary": "From dead crabs to shredded bed sheets, fraudsters are using fake photos and videos to get their money back from ecommerce sites."
+    },
+    {
+        "id": "https://www.engadget.com/deals/get-up-to-78-percent-off-expressvpn-two-year-plans-for-the-holidays-194912043.html?src=rss",
+        "title": "Get up to 78 percent off ExpressVPN two-year plans for the holidays",
+        "link": "https://www.engadget.com/deals/get-up-to-78-percent-off-expressvpn-two-year-plans-for-the-holidays-194912043.html?src=rss",
+        "published": "Fri, 19 Dec 2025 19:49:12 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>It looks like the holidays aren't a bad time to shop for a VPN subscription. <a href=\"https://checkout.expressvpn.com/order\">ExpressVPN</a>, Engadget's pick for the <a href=\"https://www.engadget.com/cybersecurity/vpn/best-vpn-130004396.html\">best premium provider</a>, currently has a less premium price. This deal gives you two years of the Advanced plan (with a bonus of four free months) for only $101. When it isn't on sale, the same subscription would cost $392.</p> \n<p>Engadget's VPN guru, "
+    },
+    {
+        "id": "https://www.engadget.com/deals/the-best-ipad-deals-this-week-include-the-ipad-mini-for-100-off-150020342.html?src=rss",
+        "title": "The best iPad deals this week include the iPad mini for $100 off",
+        "link": "https://www.engadget.com/deals/the-best-ipad-deals-this-week-include-the-ipad-mini-for-100-off-150020342.html?src=rss",
+        "published": "Fri, 19 Dec 2025 19:13:58 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>The iPad, of course, isn't the only tablet computer out there \u2014 it wasn't even the first \u2014 but Apple's version <a href=\"https://www.engadget.com/ipad-first-gen-2010-reader-review-roundup-150037176.html\">redefined the category</a>. In our <a href=\"https://www.engadget.com/mobile/tablets/best-tablets-150026056.html\">opinion</a>, it's the best tablet you can buy and these slates consistently earn <a href=\"https://www.engadget.com/mobile/tablets/ipad-air-m3-review-a-modest-update-thats-still-easy"
+    },
+    {
+        "id": "https://gizmodo.com/instacart-to-pay-60-million-in-refunds-for-allegedly-deceiving-customers-2000701915",
+        "title": "Instacart to Pay $60 Million in Refunds for Allegedly Deceiving Customers",
+        "link": "https://gizmodo.com/instacart-to-pay-60-million-in-refunds-for-allegedly-deceiving-customers-2000701915",
+        "published": "Fri, 19 Dec 2025 19:35:38 +0000",
+        "source": "Gizmodo",
+        "summary": "The U.S. Federal Trade Commission accused Instacart of misleading costumers with promises of free deliveries and full refunds."
+    },
+    {
+        "id": "https://gizmodo.com/a-starlink-satellite-is-tumbling-toward-earth-after-a-strange-anomaly-in-orbit-2000701874",
+        "title": "A Starlink Satellite Is Tumbling Toward Earth After a Strange Anomaly in Orbit",
+        "link": "https://gizmodo.com/a-starlink-satellite-is-tumbling-toward-earth-after-a-strange-anomaly-in-orbit-2000701874",
+        "published": "Fri, 19 Dec 2025 19:25:32 +0000",
+        "source": "Gizmodo",
+        "summary": "The satellite suffered a sudden drop in altitude, suggesting there may have been a small explosion."
+    },
+    {
+        "id": "https://gizmodo.com/frank-darabont-reveals-the-real-story-behind-why-he-didnt-take-on-the-dark-tower-2000701920",
+        "title": "Frank Darabont Reveals the Real Story Behind Why He Didn\u2019t Take on \u2018The Dark Tower\u2019",
+        "link": "https://gizmodo.com/frank-darabont-reveals-the-real-story-behind-why-he-didnt-take-on-the-dark-tower-2000701920",
+        "published": "Fri, 19 Dec 2025 19:16:22 +0000",
+        "source": "Gizmodo",
+        "summary": "The director of 'The Shawshank Redemption,' 'The Green Mile,' and 'The Mist' talks about the Stephen King project that got away."
+    },
+    {
+        "id": "https://gizmodo.com/openais-stargate-data-center-approved-in-michigan-as-american-anger-starts-to-boil-2000701890",
+        "title": "OpenAI\u2019s Stargate Data Center Approved in Michigan as American Anger Starts to Boil",
+        "link": "https://gizmodo.com/openais-stargate-data-center-approved-in-michigan-as-american-anger-starts-to-boil-2000701890",
+        "published": "Fri, 19 Dec 2025 19:15:24 +0000",
+        "source": "Gizmodo",
+        "summary": "The data center backlash has begun."
+    },
+    {
+        "id": "https://mashable.com/article/apple-iphone-fold-2026",
+        "title": "The iPhone Fold is coming. You may not get one for years.",
+        "link": "https://mashable.com/article/apple-iphone-fold-2026",
+        "published": "Fri, 19 Dec 2025 19:02:19 +0000",
+        "source": "Mashable",
+        "summary": "A top Apple analyst reveals the state of play on the iPhone Fold, which looks set for a 2026 launch \u2014 but production delays persist."
+    },
+    {
+        "id": "https://www.zdnet.com/article/outlaw-audio-rr-2160-mk-ii-review/",
+        "title": "I didn't expect a retro amp to sound this accurate across every genre - but this one nails it",
+        "link": "https://www.zdnet.com/article/outlaw-audio-rr-2160-mk-ii-review/",
+        "published": "Fri, 19 Dec 2025 20:06:00 GMT",
+        "source": "Latest news",
+        "summary": "Outlaw Audio's retro stereo receiver delivers high-quality sound, even though it's considerably cheaper than most professional equipment."
+    },
+    {
+        "id": "https://www.zdnet.com/article/creative-stage-pro-soundbar-review/",
+        "title": "Can't hear TV dialogue? This portable soundbar worked wonders for my audio (at a low price)",
+        "link": "https://www.zdnet.com/article/creative-stage-pro-soundbar-review/",
+        "published": "Fri, 19 Dec 2025 19:33:00 GMT",
+        "source": "Latest news",
+        "summary": "If you're looking for great sound without breaking the bank, the Creative Stage Pro is a budget-friendly option worth considering."
+    },
+    {
+        "id": "https://dos.zone/grand-theft-auto-vice-city/",
+        "title": "You can now play Grand Theft Auto Vice City in the browser",
+        "link": "https://dos.zone/grand-theft-auto-vice-city/",
+        "published": "Fri, 19 Dec 2025 19:12:57 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46329696\">Comments</a>"
     }
 ]
