📚 Auto-update: News data refreshed - 2025-12-19 21:10 UTC

--- a/tech-news-frontend/public/knowledge_base.json
+++ b/tech-news-frontend/public/knowledge_base.json
@@ -22638,5 +22638,21 @@
         "published": "Thu, 18 Dec 2025 15:01:10 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46313390\">Comments</a>"
+    },
+    {
+        "id": "https://gizmodo.com/hotspots-capable-of-driving-catastrophic-mega-hurricanes-are-spreading-across-the-oceans-2000702025",
+        "title": "Hotspots Capable of Driving Catastrophic Mega-Hurricanes Are Spreading Across the Oceans",
+        "link": "https://gizmodo.com/hotspots-capable-of-driving-catastrophic-mega-hurricanes-are-spreading-across-the-oceans-2000702025",
+        "published": "Fri, 19 Dec 2025 21:05:44 +0000",
+        "source": "Gizmodo",
+        "summary": "This process, driven by climate change, is increasing the risk of \u201cCategory 6\u201d tropical cyclones making landfall in densely populated areas."
+    },
+    {
+        "id": "https://www.zdnet.com/article/brick-review-block-apps-stop-doomscrolling/",
+        "title": "Want to unplug for the holidays? I bricked my iPhone to prevent doomscrolling - and it actually worked",
+        "link": "https://www.zdnet.com/article/brick-review-block-apps-stop-doomscrolling/",
+        "published": "Fri, 19 Dec 2025 21:09:40 GMT",
+        "source": "Latest news",
+        "summary": "Brick is one of the few new devices that positively changed my daily content consumption. It would be a great gift for the phone-addicted friend this holiday."
     }
 ]
