--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -22638,5 +22638,21 @@
         "published": "Fri, 19 Dec 2025 20:44:00 GMT",
         "source": "Latest news",
         "summary": "Pebblebee's Clip 5 finder tag attaches to a key ring, works with both iOS and Android devices, and makes a loud sound."
+    },
+    {
+        "id": "https://gizmodo.com/hotspots-capable-of-driving-catastrophic-mega-hurricanes-are-spreading-across-the-oceans-2000702025",
+        "title": "Hotspots Capable of Driving Catastrophic Mega-Hurricanes Are Spreading Across the Oceans",
+        "link": "https://gizmodo.com/hotspots-capable-of-driving-catastrophic-mega-hurricanes-are-spreading-across-the-oceans-2000702025",
+        "published": "Fri, 19 Dec 2025 21:05:44 +0000",
+        "source": "Gizmodo",
+        "summary": "This process, driven by climate change, is increasing the risk of \u201cCategory 6\u201d tropical cyclones making landfall in densely populated areas."
+    },
+    {
+        "id": "https://www.zdnet.com/article/brick-review-block-apps-stop-doomscrolling/",
+        "title": "Want to unplug for the holidays? I bricked my iPhone to prevent doomscrolling - and it actually worked",
+        "link": "https://www.zdnet.com/article/brick-review-block-apps-stop-doomscrolling/",
+        "published": "Fri, 19 Dec 2025 21:09:40 GMT",
+        "source": "Latest news",
+        "summary": "Brick is one of the few new devices that positively changed my daily content consumption. It would be a great gift for the phone-addicted friend this holiday."
     }
 ]
