--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -22654,5 +22654,109 @@
         "published": "Fri, 19 Dec 2025 21:09:40 GMT",
         "source": "Latest news",
         "summary": "Brick is one of the few new devices that positively changed my daily content consumption. It would be a great gift for the phone-addicted friend this holiday."
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/19/where-are-investors-placing-their-bets-next-year-ai-ai-ai/",
+        "title": "Where are investors placing their bets next year? AI, AI, AI.",
+        "link": "https://techcrunch.com/2025/12/19/where-are-investors-placing-their-bets-next-year-ai-ai-ai/",
+        "published": "Fri, 19 Dec 2025 22:00:00 +0000",
+        "source": "TechCrunch",
+        "summary": "Investors at TechCrunch Disrupt explained their focus on artificial intelligence and offered advice to founders on how to stand out in a crowded AI field."
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/19/cursor-continues-acquisition-spree-with-graphite-deal/",
+        "title": "Cursor continues acquisition Spree with Graphite deal",
+        "link": "https://techcrunch.com/2025/12/19/cursor-continues-acquisition-spree-with-graphite-deal/",
+        "published": "Fri, 19 Dec 2025 21:51:22 +0000",
+        "source": "TechCrunch",
+        "summary": "Graphite is an AI code review assistant that was last valued at $290 million."
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/19/elon-musks-56b-tesla-pay-package-restored-by-delaware-supreme-court/",
+        "title": "Elon Musk\u2019s $56B Tesla pay package restored by Delaware Supreme Court",
+        "link": "https://techcrunch.com/2025/12/19/elon-musks-56b-tesla-pay-package-restored-by-delaware-supreme-court/",
+        "published": "Fri, 19 Dec 2025 21:50:50 +0000",
+        "source": "TechCrunch",
+        "summary": "The decision brings to a close a years-long court battle that irked Musk so much he moved Tesla's incorporation from Delaware to Texas."
+    },
+    {
+        "id": "https://www.theverge.com/science/848445/nuclear-energy-ndaa-defense-bill",
+        "title": "Next-generation nuclear reactors could get a boost from the National Defense Authorization Act",
+        "link": "https://www.theverge.com/science/848445/nuclear-energy-ndaa-defense-bill",
+        "published": "2025-12-19T17:04:48-05:00",
+        "source": "The Verge",
+        "summary": "President Trump signed the National Defense Authorization Act (NDAA) for Fiscal Year 2026 Thursday with measures that further the bipartisan push for next-generation nuclear power plants. The Trump administration has embraced the technology as a new energy source for data centers demanding greater amounts of electricity for AI. Many Democrats, meanwhile, have championed smaller and [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/news/848435/openai-chatgpt-characteristics-update-warmth-enthusiasm",
+        "title": "ChatGPT will now let you pick how nice it is",
+        "link": "https://www.theverge.com/news/848435/openai-chatgpt-characteristics-update-warmth-enthusiasm",
+        "published": "2025-12-19T16:28:08-05:00",
+        "source": "The Verge",
+        "summary": "OpenAI will now give you the ability to dial up - or down - ChatGPT's warmth and enthusiasm. An update rolling out on Friday gives you the option to choose whether you want \"more\" or \"less\" of these personality traits, or stick with the default. There are also options to tweak how often ChatGPT uses [&#8230;]"
+    },
+    {
+        "id": "https://www.wired.com/story/uncanny-valley-podcast-new-chapter-for-uncanny-valley/",
+        "title": "Introducing a New Chapter for \u2018Uncanny Valley\u2019",
+        "link": "https://www.wired.com/story/uncanny-valley-podcast-new-chapter-for-uncanny-valley/",
+        "published": "Fri, 19 Dec 2025 21:47:28 +0000",
+        "source": "WIRED",
+        "summary": "In this episode, we look back at 2025 and look ahead to what's happening in 2026\u2014including what\u2019s in store for Uncanny Valley."
+    },
+    {
+        "id": "https://www.wired.com/story/the-dojs-jeffrey-epstein-files-are-here/",
+        "title": "The DOJ\u2019s Jeffrey Epstein Files Are Here",
+        "link": "https://www.wired.com/story/the-dojs-jeffrey-epstein-files-are-here/",
+        "published": "Fri, 19 Dec 2025 21:21:54 +0000",
+        "source": "WIRED",
+        "summary": "Forced by an act of Congress, the Justice Department has released \u201chundreds of thousands\u201d of pages of documents related to Epstein\u2014but not everything, as is required by law."
+    },
+    {
+        "id": "https://arstechnica.com/gadgets/2025/12/some-valorant-players-need-to-update-their-pc-bios-to-keep-anti-cheat-software-happy/",
+        "title": "Riot Games is making an anti-cheat change that could be rough on older PCs",
+        "link": "https://arstechnica.com/gadgets/2025/12/some-valorant-players-need-to-update-their-pc-bios-to-keep-anti-cheat-software-happy/",
+        "published": "Fri, 19 Dec 2025 20:27:36 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "BIOS checks will only affect a limited subset of <em>Valorant</em> players for now."
+    },
+    {
+        "id": "https://arstechnica.com/cars/2025/12/the-chevrolet-equinox-ev-is-high-on-comfort-and-convenience/",
+        "title": "Not too big, not too expensive: The Chevrolet Equinox EV",
+        "link": "https://arstechnica.com/cars/2025/12/the-chevrolet-equinox-ev-is-high-on-comfort-and-convenience/",
+        "published": "Fri, 19 Dec 2025 20:09:30 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "You get quite a lot of EV for the Equinox's sub-$35,000 starting price."
+    },
+    {
+        "id": "https://gizmodo.com/these-laser-beams-could-power-military-drones-5000-feet-in-the-air-2000702020",
+        "title": "These Laser Beams Could Power Military Drones 5,000 Feet in the Air",
+        "link": "https://gizmodo.com/these-laser-beams-could-power-military-drones-5000-feet-in-the-air-2000702020",
+        "published": "Fri, 19 Dec 2025 21:25:15 +0000",
+        "source": "Gizmodo",
+        "summary": "The U.S. military-backed project is now on the way to integrated system testing, the company said."
+    },
+    {
+        "id": "https://gizmodo.com/sony-peanuts-snoopy-charlie-brown-2000701919",
+        "title": "From Spidey to Snoopy, Hollywood\u2019s Acquisition Mania Has Come for \u2018Peanuts\u2019",
+        "link": "https://gizmodo.com/sony-peanuts-snoopy-charlie-brown-2000701919",
+        "published": "Fri, 19 Dec 2025 21:15:35 +0000",
+        "source": "Gizmodo",
+        "summary": "Sony just purchased a controlling stake in the iconic brand featuring Snoopy, Charlie Brown, and more."
+    },
+    {
+        "id": "https://linusakesson.net/music/bolero/index.php",
+        "title": "8-bit Bol\u00e9ro",
+        "link": "https://linusakesson.net/music/bolero/index.php",
+        "published": "Fri, 19 Dec 2025 11:38:54 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46324702\">Comments</a>"
+    },
+    {
+        "id": "https://cursor.com/blog/graphite",
+        "title": "Graphite is joining Cursor",
+        "link": "https://cursor.com/blog/graphite",
+        "published": "Fri, 19 Dec 2025 15:57:01 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46327206\">Comments</a>"
     }
 ]
